# pdb-mcp

./: .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: release.yml
src/pdb_mcp/: __init__.py  server.py  session.py
